--- a/DistributedBanking.Processing.ReplicaSet/appsettings.Production.json
+++ b/DistributedBanking.Processing.ReplicaSet/appsettings.Production.json
@@ -4,12 +4,12 @@
     "DatabaseName": "banking"
   },
   "Kafka": {
-    "Brokers": "localhost:9092",
+    "Brokers": "kafka:29092",
     "Connections": {
       "RoleCreation": "roles.creation",
       "CustomersRegistration": "customers.registration",
-      "WorkersRegistration": "workers.registration",
       "CustomersUpdate": "customers.update",
+      "WorkersRegistration": "workers.registration",
       "UsersDeletion": "users.deletion",
       "AccountCreation": "accounts.creation",
       "AccountDeletion": "accounts.deletion",
@@ -25,6 +25,6 @@
     }
   },
   "Redis": {
-    "ConnectionString": "localhost:6379,abortConnect=false,connectRetry=3,connectTimeout=15000"
+    "ConnectionString": "redis,abortConnect=false,connectRetry=3,connectTimeout=15000"
   }
 }
