--- a/DistributedBanking.Processing.ReplicaSet/DistributedBanking.Processing.ReplicaSet.csproj
+++ b/DistributedBanking.Processing.ReplicaSet/DistributedBanking.Processing.ReplicaSet.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
